src/test/resources/refCompilerOutput/invalid/semanticErr/IO/readTypeErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 13:2 -- Incompatible type BOOL
